# SpringSample: ユーザ登録画面(エラーメッセージ追加)

--- a/helloboot/src/main/resources/messages.properties
+++ b/helloboot/src/main/resources/messages.properties
@@ -1,2 +1,29 @@
 typeMismatch.signupForm.age=数値を入力してください
-typeMismatch.signupForm.birthdate=yyyy/MM/dd形式で有効な日付を入力してください
+
+# ユーザ登録画面
+## ユーザID
+signupForm.userId=ユーザーID
+NotBlank.signupForm.userId={0}を入力してください
+Email.signupForm.userId={0}にはメールアドレスを入力してください
+
+## パスワード
+signupForm.password=パスワード
+NotBlank.signupForm.password={0}を入力してください
+Length.signupForm.password={0}は、{2}桁以上、{1}桁以下で入力してください
+Pattern.signupForm.password={0}は半角英数字で入力してください
+
+## ユーザ名
+signupForm.userName=ユーザ名
+NotBlank.signupForm.userName={0}を入力してください
+
+## 誕生日
+signupForm.birthdate=誕生日
+NotNull.signupForm.birthdate={0}を入力してください
+typeMismatch.signupForm.birthdate={0}は、yyyy/MM/dd形式で有効な日付を入力してください
+
+## 年齢
+signupForm.age=年齢
+Min.signupForm.age={0}は{1}以下を入力してください
+Max.signupForm.age={0}は{1}以上を入力してください
+
+## 結婚ステータス
